Phase 4: Java 21 cleanup (toList, enhanced switch, formatted)
- Replace .collect(Collectors.toList()) with .toList() (7 occurrences)
- Remove unused Collectors imports from PlanConverter and ExpressionConverter
- Convert traditional switch statements to enhanced switch expressions:
  - JoinType dispatch in SQLGenerator (2 places) and Join
  - TableFormat dispatch in SQLGenerator (2 places) and TableScan
  - SparkCompatMode.parse() string dispatch
  - DuckDBRuntime extension loading (Mode enum)
  - ExtractValueExpression.toSQL() extraction type dispatch
  - SchemaParser.parsePrimitiveType() and parseJsonDataType()
  - TypeMapper.fromDuckDBType() type mapping
  - SchemaInferrer.duckdbTypeToSparkType() full type mapping
- Use String.formatted() instead of String.format() where cleaner
  (TableScan, ExtractValueExpression, SparkCompatMode)
- Net reduction: ~230 lines removed, ~145 lines added
- All 980 unit tests pass

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>